# pda

./: .dockerignore  .env.example  .gitignore  .mcp.json  AUDIT_LOGGING_PLAN.md  CLAUDE.local.md  CLAUDE.md  DEPENDENCIES.md  Dockerfile  FE_CLEANUP_PLAN.md  FLUTTER_TO_VITE_REACT_MIGRATION.md  Makefile  NOTIFICATIONS_WEBHOOK_PLAN.md  README.md  RECOMMENDATIONS_EXPLORATION.md  SECURITY_AUDIT.md  SESSION_4_PLAN.md  dev-next.sh  dev.sh  entrypoint.sh  event-creation-flow-analysis.md  nginx.conf.template  open-issues.csv  pyproject.toml  verbose-ty.txt
.claude/: settings.json  settings.local.json
.claude/commands/: admin.md  django-model.md  lint.md  test.md  views.md
.claude/docs/: routes.md  vite-migration-gaps.md
.claude/hooks/: block-legacy-error-patterns.py
.claude/plans/: 185-events-list-view.md
.claude/rules/: color-blind-friendly.md  complexity.md  file-size.md  github-issue-assignment.md  github-issues.md  no-co-authored-by.md  no-merge-prs.md  package-versions.md  prefer-types-over-strings.md  pull-requests.md  rate-limiting-and-input-validation.md  standards-django-flutter-integration.md  ui-copy-tone.md
.cursor/rules/: cursor-agent-ci.mdc  development-practices.mdc  pda-project.mdc  testing.mdc  verification.mdc
.github/workflows/: ci-build.yml  ci.yml  deploy-railway.yml  promote-staging-to-main.yml
backend/: openapi_schema.json
backend/community/: _calendar.py  _cohost_invite_helpers.py  _content_render.py  _docs.py  _docs_documents.py  _event_actions.py  _event_blast_helpers.py  _event_blasts.py  _event_cohost_invites.py  _event_comment_schemas.py  _event_comments.py  _event_flags.py  _event_helpers.py  _event_invitations.py  _event_poll_schemas.py  _event_rsvps.py  _event_schemas.py  _event_transitions.py  _events.py  _feedback.py  _field_limits.py  _geocode.py  _guidelines.py  _home.py  _join_form.py  _join_request_resend.py  _join_requests.py  _pages.py  _polls.py  _prosemirror_html.py  _shared.py  _sms.py  _survey_helpers.py  _survey_schemas.py  _survey_validators.py  _surveys.py  _surveys_public.py  _validation.py  _version.py  _welcome_template.py  (+5 more)
backend/config/: audit.py  logging_config.py  media_proxy.py  middleware.py  ratelimit.py  settings.py  urls.py  validation_handlers.py  wsgi.py
backend/notifications/: admin.py  api.py  models.py  schemas.py  service.py  sse.py
backend/tests/: _asserts.py  _event_blasts_shared.py  conftest.py  test_api.py  test_auth.py  (+51 more)
docs/: audit-issue-156-raw-strings.md  event-attendance-stats-plan.md  flutter-test-migration.md  local-environment-setup.md  plan-forum-design.md  plan-issue-104-cohost-search.md
frontend/: .flutter-plugins-dependencies 2  FE_AUDIT_LOGGING.md  FRONTEND_AUDIT.md  README.md  TEST_AUDIT.md  analysis_options.yaml  build.yaml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend-next/: .dockerignore  .gitignore  .prettierignore  Dockerfile  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.app.json
plans/: b2-media-proxy.md  event-photo-upload.md  event-price-payment-links.md  issue-150-sms-credentials-on-approval.md  official-vs-community-events.md  pause-membership.md  profile-photo-backblaze-b2.md  purge-old-events.md  survey-form-builder.md  tappable-event-location-maps.md  week-view-vertical-redesign.md
scripts/: list_affected_tests.py
(+656 files in other folders)
