[project]
name = "pda"
version = "0.1.0"
description = "Protein Deficients Anonymous — vegan collective liberation community"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.4,<2.0",
    "django-ninja-jwt>=5.3,<6.0",
    "django-cors-headers>=4.6,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
    "dj-database-url>=3.0,<4.0",
    "whitenoise>=6.11,<7.0",
    "gunicorn>=23.0,<24.0",
    "pydantic>=2.12,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-django>=4.11",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --strict-markers --tb=short --reuse-db"
markers = [
    "django_db: Mark test as requiring database access",
    "unit: Mark test as a unit test (no database or external dependencies)",
    "integration: Mark test as an integration test",
]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:ninja.signature.utils",
]

[tool.ty.rules]
# Django uses metaprogramming for Model.objects, Model.DoesNotExist, etc.
# ty (beta) can't resolve these yet — ignore until ty ships Django support.
unresolved-attribute = "warn"
invalid-argument-type = "warn"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
