[project]
name = "pda"
version = "0.1.0"
description = "protein deficients anonymous — vegan collective liberation community"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.4,<2.0",
    "django-ninja-jwt>=5.3,<6.0",
    "django-cors-headers>=4.6,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
    "dj-database-url>=3.0,<4.0",
    "whitenoise>=6.11,<7.0",
    "gunicorn>=23.0,<24.0",
    "pydantic>=2.12,<3.0",
    "phonenumbers>=8.13,<9.0",
    "icalendar>=6.1,<7.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.1",
    "pytest>=8.4",
    "pytest-django>=4.11",
    "pytest-xdist>=3.8.0",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --strict-markers --tb=short -n auto"
markers = [
    "django_db: Mark test as requiring database access",
    "unit: Mark test as a unit test (no database or external dependencies)",
    "integration: Mark test as an integration test",
]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:ninja.signature.utils",
]

[tool.ty.rules]
# django-stubs resolves most Django metaclass issues (Model.objects, DoesNotExist, etc.).
# Remaining warnings are from ninja_jwt (no stubs) — suppressed with inline # type: ignore.
unresolved-attribute = "warn"
invalid-argument-type = "warn"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "UP", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-returns = 6
max-branches = 12
max-args = 5
max-statements = 50

[tool.ruff.format]
quote-style = "double"
